--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body class="">
-    <header class="p-5 md:flex lg:flex justify-center bg-green-300">
+    <header class="p-5 md:flex lg:flex justify-center">
         <!-------------------------
             Banner
         ------------------------------------>
-        <div class="p-4 bg-orange-500">
+        <div class="p-4">
             <h1 class="title text-6xl font-semibold leading-tight mt-5">It's good<br>tea time at The<br>Tea House</h1>
             <p class="banner-description text-common mt-5">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
             <button class="btn-primary flex mt-5">Explore More <img class="ms-2" src="images/arrow.png" alt=""></button>
         </div>
-        <div class="mt-10 p-4 bg-teal-500">
+        <div class="mt-10 p-4">
             <img class="relative" src="images/banner.png" alt="">
             <button class="star-btn flex items-center justify-center bottom-28 left-24">
                 <div><img src="images/Group 5.png" alt=""></div>
