--- a/index.html
+++ b/index.html
@@ -54,8 +54,48 @@
             Our Featured Products
         ------------------------------------->
         <section class="">
-            <h3 class="text-3xl font-semibold">Our Featured Products</h3>
-            <p class="featured-description">A teahouse primarily sells a selection of different teas. A teahouse also mainly focuses on serving high-quality loose-leaf teas, and many will conduct tea ceremonies, usually following traditional Japanese or Chinese ceremony customs.</p>
+            <div class="text-center mt-2 p-4">
+                <h3 class="text-4xl font-semibold">Our Featured Products</h3>
+                <p class="text-common max-w-5xl mx-auto mt-5">A teahouse primarily sells a selection of different teas. A teahouse also mainly focuses on serving high-quality loose-leaf teas, and many will conduct tea ceremonies, usually following traditional Japanese or Chinese ceremony customs.</p>
+            </div>
+            <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 px-10 mt-5 lg:mx-16">
+                <div class="bg-[#F4F4F4] rounded-2xl p-4 flex items-center flex-col text-center">
+                    <div class="p-3">
+                        <img src="images/tea-1.png" alt="">
+                    </div>
+                    <div class="">
+                        <h3 class="text-2xl font-semibold mt-5">Lemon Tea</h3>
+                        <p class="text-common text-sm mt-2 mb-3">Milk water, lemon and honey</p>
+                    </div>
+                </div>
+                <div class="bg-[#F4F4F4] rounded-2xl p-4 flex items-center flex-col text-center">
+                    <div class="p-3">
+                        <img src="images/tea-2.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-semibold mt-5">Strawberry Tea</h3>
+                        <p class="text-common text-sm mt-2 mb-3">Milk strawberries, water and sugar</p>
+                    </div>
+                </div>
+                <div class="bg-[#F4F4F4] rounded-2xl p-4 flex items-center flex-col text-center">
+                    <div class="p3">
+                        <img src="images/tea-3.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-semibold mt-5">Tropical Tea</h3>
+                        <p class="text-common text-sm mt-2 mb-3">Milk water, grapes, mango and honey</p>
+                    </div>
+                </div>
+                <div class="bg-[#F4F4F4] rounded-2xl p-4 flex items-center flex-col text-center">
+                    <div class="p-3">
+                        <img src="images/tea-4.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-semibold mt-5">Colour  Tea</h3>
+                        <p class="text-common text-sm mt-2 mb-3">Black tea water and sugar</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-----------------------------
