--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
     <!-- Google Font Link  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
     <!-- Font Awesome Link  -->
     <script src="https://kit.fontawesome.com/0f4ca1df67.js" crossorigin="anonymous"></script>
     <!-- Tailwind Link  -->
@@ -15,27 +16,29 @@
     <!-- Tailwind Configuration  -->
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-                common: 'var(--Dark-03, #777);',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                        common: 'var(--Dark-03, #777);',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
     <!-- CSS Link  -->
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
+
 <body class="">
-    <header class="p-5 md:flex lg:flex justify-center">
+    <header class="p-4 md:flex lg:flex justify-center">
         <!-------------------------
             Banner
         ------------------------------------>
         <div class="p-4">
             <h1 class="title text-6xl font-semibold leading-tight mt-5">It's good<br>tea time at The<br>Tea House</h1>
-            <p class="banner-description text-common mt-5">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+            <p class="banner-description text-common mt-5">Tea and Botanical Solutions Supplier Give Optimum
+                Satisfaction To Your Taste Buds.</p>
             <button class="btn-primary flex mt-5">Explore More <img class="ms-2" src="images/arrow.png" alt=""></button>
         </div>
         <div class="mt-10 p-4">
@@ -56,7 +59,9 @@
         <section class="">
             <div class="text-center mt-2 p-4">
                 <h3 class="text-4xl font-semibold">Our Featured Products</h3>
-                <p class="text-common max-w-5xl mx-auto mt-5">A teahouse primarily sells a selection of different teas. A teahouse also mainly focuses on serving high-quality loose-leaf teas, and many will conduct tea ceremonies, usually following traditional Japanese or Chinese ceremony customs.</p>
+                <p class="text-common max-w-5xl mx-auto mt-5">A teahouse primarily sells a selection of different teas.
+                    A teahouse also mainly focuses on serving high-quality loose-leaf teas, and many will conduct tea
+                    ceremonies, usually following traditional Japanese or Chinese ceremony customs.</p>
             </div>
             <div class=" grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 px-10 mt-5 lg:mx-16">
                 <div class="bg-[#F4F4F4] rounded-2xl p-4 flex items-center flex-col text-center">
@@ -91,7 +96,7 @@
                         <img src="images/tea-4.png" alt="">
                     </div>
                     <div>
-                        <h3 class="text-2xl font-semibold mt-5">Colour  Tea</h3>
+                        <h3 class="text-2xl font-semibold mt-5">Colour Tea</h3>
                         <p class="text-common text-sm mt-2 mb-3">Black tea water and sugar</p>
                     </div>
                 </div>
@@ -101,8 +106,32 @@
         <!-----------------------------
             Great Tea
         ------------------------------------->
-        <section>
-
+        <section class="flex flex-col lg:flex-row mt-10">
+            <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-5 m-20">
+                <div class="rounded-xl bg-gradient-to-r from-red-300 to-pink-200 h-36"></div>
+                <div class="row-span-2 rounded-xl flex justify-center items-center bg-[#E6A6231A] py-10">
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="order-4 md:order-3 row-span-2 rounded-xl flex justify-center items-center bg-[#5776391A] py-10">
+                    <img src="images/fresh-2.png" alt="">
+                </div>
+                <div class="order-3 md:order-4 rounded-xl bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF] h-36"></div>
+            </div>
+            <div class="flex-1 lg:mt-16 p-5">
+                <h3 class="text-4xl font-semibold">Great Tea, Freshly <br>Presented</h3>
+                <p class="text-common mt-5">As you may know, the best way to judge tea, is through its taste. But there
+                    are more ways to describe tea than using just words like “yum,” “mmmm,” and “ahhh.” The tea that you
+                    taste can be described as sour and sweet to spicy and earthy. Most teas matches its description like
+                    Creamy Caramel or Sweet Lemon, which makes it easy to identify the taste before even tasting it.</p>
+                <h4 class="text-lg font-semibold mt-5">Unique Taste</h4>
+                <p class="text-common mt-3 w-10/12">One of the best ways to judge a tea, of course, is by the taste.
+                    Green tea should taste fresh, not stale, and should not be too astringent. Black tea should be full
+                    bodied and fresh.</p>
+                <h4 class="text-lg font-semibold mt-2">Premium Quality</h4>
+                <p class="text-common mt-3 w-8/12">Easy to brew, lacking bitterness no matter how it is prepared. No
+                    matter how good a tea tastes the first time, a repeat performance is the real mark of quality.
+                </p>
+            </div>
         </section>
 
         <!-----------------------------
@@ -124,4 +153,5 @@
 
     </footer>
 </body>
+
 </html>
