--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 </head>
 
 <body class="">
-    <header class="p-4 md:flex lg:flex justify-center">
+    <header class="md:flex lg:flex justify-center">
         <!-------------------------
             Banner
         ------------------------------------>
-        <div class="p-4">
+        <div class="p-5">
             <h1 class="title text-6xl font-semibold leading-tight mt-5">It's good<br>tea time at The<br>Tea House</h1>
             <p class="banner-description text-common mt-5">Tea and Botanical Solutions Supplier Give Optimum
                 Satisfaction To Your Taste Buds.</p>
@@ -43,7 +43,7 @@
         </div>
         <div class="mt-10 p-4">
             <img class="relative" src="images/banner.png" alt="">
-            <button class="star-btn flex items-center justify-center bottom-28 left-24">
+            <button class="star-btn flex items-center justify-center bottom-12 lg:bottom-28 left-4 lg:left-24">
                 <div><img src="images/Group 5.png" alt=""></div>
                 <div>
                     <h6 class="rating">5.00</h6>
@@ -106,7 +106,7 @@
         <!-----------------------------
             Great Tea
         ------------------------------------->
-        <section class="flex flex-col lg:flex-row mt-10">
+        <section class="flex flex-col lg:flex-row mt-10 text-center lg:text-start">
             <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-5 m-20">
                 <div class="rounded-xl bg-gradient-to-r from-red-300 to-pink-200 h-36"></div>
                 <div class="row-span-2 rounded-xl flex justify-center items-center bg-[#E6A6231A] py-10">
@@ -124,11 +124,11 @@
                     taste can be described as sour and sweet to spicy and earthy. Most teas matches its description like
                     Creamy Caramel or Sweet Lemon, which makes it easy to identify the taste before even tasting it.</p>
                 <h4 class="text-lg font-semibold mt-5">Unique Taste</h4>
-                <p class="text-common mt-3 w-10/12">One of the best ways to judge a tea, of course, is by the taste.
+                <p class="text-common mt-3 lg:w-10/12 text-center lg:text-start">One of the best ways to judge a tea, of course, is by the taste.
                     Green tea should taste fresh, not stale, and should not be too astringent. Black tea should be full
                     bodied and fresh.</p>
                 <h4 class="text-lg font-semibold mt-2">Premium Quality</h4>
-                <p class="text-common mt-3 w-8/12">Easy to brew, lacking bitterness no matter how it is prepared. No
+                <p class="text-common mt-3 lg:w-8/12 text-center lg:text-start">Easy to brew, lacking bitterness no matter how it is prepared. No
                     matter how good a tea tastes the first time, a repeat performance is the real mark of quality.
                 </p>
             </div>
@@ -137,8 +137,45 @@
         <!-----------------------------
             Meet Our Super Clients
         ------------------------------------->
-        <section>
-
+        <section class="bg-gradient-to-r from-[#ff8938] to-[#f00] flex flex-col lg:flex-row gap-10 p-10 lg:p-16 lg:m-20 rounded-lg mt-10">
+            <div class="flex items-center lg:pr-28">
+             <div class="text-center lg:text-start ">
+                <h1 class="text-4xl font-semibold text-[#F4F4F4]">Meet Our Super <br>Clients</h1>
+                <p class="mt-5 text-[#F4F4F4] text-base">At Langan's Tea House, we are overflowing with gratitude as we stand on the podium of culinary excellence, clutching our third consecutive Good Food Award Gold Seal 2023/24. This triumphant moment could not have been possible without the unwavering support of our beloved patrons, dedicated workers, enthusiastic volunteers, and all those who took the time to cast their votes in our favor.</p>
+                <button class="clients-btn mt-5 bg-white ">
+                    <div class="show">Show All</div>
+                </button>
+             </div>
+            </div>
+         <div class="relative mt-5 ">
+            <div class="lg:w-[433px] relative bg-white items-center p-10 rounded-lg opacity-40 z-10 mb-16 text-center lg:text-start">
+                <img class="absolute border-4  rounded-full bg-white border-white -top-5 -left-5" src="images/client.png" alt="">
+                <p class="text-[#777777] mt-3">Receiving the Good Food Award Gold Seal for three years running is not just an accomplishment; it's a testament to our commitment to quality, service, and the art of creating memorable dining experiences.</p>
+                <h4 class="font-semibold mt-3">Katie Gibson</h4>
+                <p class="text-[#777777] font-semibold mt-3">Businesswomen</p>
+                <div class="flex justify-end">
+                    <img src="images/circles.png" alt="">
+                </div>
+            </div>
+            <div class="lg:w-[433px] absolute bg-white items-center p-10 rounded-lg top-40 lg:-left-24 z-20 text-center lg:text-start">
+                <img class="absolute border-4  rounded-full bg-white border-white -top-5 -left-5" src="images/client.png" alt="">
+                <p class="text-[#777777] mt-3">Receiving the Good Food Award Gold Seal for three years running is not just an accomplishment; it's a testament to our commitment to quality, service, and the art of creating memorable dining experiences.</p>
+                <h4 class="font-semibold mt-3">Katie Gibson</h4>
+                <p class="text-[#777777] font-semibold mt-3">Businesswomen</p>
+                <div class="flex justify-end">
+                    <img src="images/circles.png" alt="">
+                </div>
+            </div>
+            <div class="lg:w-[433px] relative bg-white items-center p-10 rounded-lg opacity-40 z-10  text-center lg:text-start">
+                <img class="absolute border-4  rounded-full bg-white border-white -top-5 -left-5" src="images/client.png" alt="">
+                <p class="text-[#777777] mt-3">Receiving the Good Food Award Gold Seal for three years running is not just an accomplishment; it's a testament to our commitment to quality, service, and the art of creating memorable dining experiences.</p>
+                <h4 class="font-semibold mt-3">Katie Gibson</h4>
+                <p class="text-[#777777] font-semibold mt-3">Businesswomen</p>
+                <div class="flex justify-end">
+                    <img src="images/circles.png" alt="">
+                </div>
+            </div>
+         </div>
         </section>
 
         <!-------------------------------
