Working on Assignment 2

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body class="">
-    <header class="md:flex lg:flex justify-center">
+    <header class="md:flex lg:flex justify-center text-center">
         <!-------------------------
             Banner
         ------------------------------------>
